--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>랜덤 이름 추출기</title>
+    <title>랜덤 CP 생성기</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>랜덤 이름 추출기</h1>
+        <h1>랜덤 CP 생성기</h1>
         <button onclick="getRandomNames()">이름 추출</button>
         <h2>결과:</h2>
         <p id="result"></p>
